Fix spacing and fix list displaying for donations

--- a/client/src/components/ReceiverProfile/Donations.scss
+++ b/client/src/components/ReceiverProfile/Donations.scss
@@ -9,3 +9,7 @@
   width: 95%;
   margin-right: 7px;
 }
+
+.donations-title {
+  margin: 0 0 65px 0;
+}
